# preon-systems-cell-v1

./: .gitignore  README.md  biological_implementation_summary.md  main.py  pyproject.toml
preon_systems_cell/: __init__.py  api.py  artifacts.py  cli.py  engine.py  models.py  web.py
preon_systems_cell/static/: app.js  index.html  styles.css
scenarios/: default_cell.yaml
tests/: test_api.py  test_engine.py  test_validation.py  test_web.py
