[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["preon_systems_cell"]

[project]
name = "preon-systems-cell"
version = "0.1.0"
description = "ATP-centric, deterministic cell simulation engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
simulate = "preon_systems_cell.cli:main"
simulate-web = "preon_systems_cell.web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
